# vibe-trading-bot

./: .env.example  .gitignore  1_编辑API配置.command  2_检查真实交易配置.command  3_打开真实交易控制台.command  4_紧急停止.command  5_解除紧急停止.command  6_停止控制台.command  7_打开5U真实试用控制台.command  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml  中文傻瓜版说明.md  成熟开源项目对比.md
.github/workflows/: ci.yml
configs/: default.yaml  live_binance_spot_5u.yaml  live_binance_spot_small.yaml  live_template.yaml  sandbox_binance.yaml
docs/: architecture.md  ci_safety_checks.md  live_trading_gate.md  risk_policy.md
src/vibe_trader/: __init__.py  app.py  cli.py  models.py
src/vibe_trader/ai/: __init__.py  reviewer.py
src/vibe_trader/analysis/: __init__.py  performance.py
src/vibe_trader/config/: loader.py  schema.py
src/vibe_trader/dashboard/: __init__.py  streamlit_app.py
src/vibe_trader/data/: __init__.py  exchange_client.py  market_data.py  repository.py
src/vibe_trader/execution/: __init__.py  accounting.py  gateway.py  live_spot.py  paper_broker.py  sandbox_binance.py
src/vibe_trader/indicators/: technicals.py
src/vibe_trader/portfolio/: __init__.py  accounting.py  reconciliation.py
src/vibe_trader/reporting/: __init__.py  obsidian.py
src/vibe_trader/risk/: engine.py  rules.py
src/vibe_trader/scheduler/: __init__.py  runner.py
src/vibe_trader/strategy/: backtest.py  base.py  (+3 more)
tests/: test_backtest.py  test_live_execution_gates.py  test_manual_order.py  test_obsidian_report.py  test_order_lifecycle.py  test_performance_analysis.py  test_risk_engine.py  test_strategy_signals.py
(+2 files in other folders)
